--- a/style/main.css
+++ b/style/main.css
@@ -1,8 +1,14 @@
 .header {
-  padding: 5px 0 20px;
+  padding: 15px 0;
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: center;
+  gap: 40px;
+}
+@media only screen and (max-width: 991px) {
+  .header {
+    gap: 0;
+  }
 }
 
 .header_top {
@@ -74,7 +80,9 @@ html[dir=rtl] .btn_drop_Currency {
 }
 
 .input_div_parant {
-  width: 627px;
+  max-width: 627px;
+  width: 100%;
+  flex-shrink: 1;
 }
 .input_div_parant .input_div_t {
   margin: auto;
@@ -133,7 +141,7 @@ html[dir=ltr] .input_div_parant .input_div_t .btn_search {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  margin-bottom: 10px;
+  flex-shrink: 0;
   gap: 20px;
 }
 @media only screen and (max-width: 767px) {
@@ -244,6 +252,16 @@ nav .ul_nav > li {
 nav .ul_nav > li:not(:last-child) {
   margin-inline-end: 26px;
 }
+@media only screen and (max-width: 1199px) {
+  nav .ul_nav > li:not(:last-child) {
+    margin-inline-end: 15px;
+  }
+}
+@media only screen and (max-width: 991px) {
+  nav .ul_nav > li:not(:last-child) {
+    margin-inline-end: 11px;
+  }
+}
 @media only screen and (max-width: 767px) {
   nav .ul_nav > li:not(:last-child) {
     margin-inline-end: 0;
@@ -262,6 +280,21 @@ nav .ul_nav > li .anc_nav {
   transition: 0.5s;
   text-transform: capitalize;
   display: inline-block;
+}
+@media only screen and (max-width: 1199px) {
+  nav .ul_nav > li .anc_nav {
+    font-size: 14px;
+  }
+}
+@media only screen and (max-width: 991px) {
+  nav .ul_nav > li .anc_nav {
+    font-size: 11px;
+  }
+}
+@media only screen and (max-width: 767px) {
+  nav .ul_nav > li .anc_nav {
+    font-size: 16px;
+  }
 }
 html[dir=rtl] nav .ul_nav > li .anc_nav {
   font-size: 14px;
@@ -284,9 +317,15 @@ nav .ul_nav .li_hover .anc_nav::after {
   font-size: 10px;
   color: #fff;
 }
+@media only screen and (max-width: 1199px) {
+  nav .ul_nav .li_hover .anc_nav::after {
+    font-size: 7px;
+  }
+}
 @media only screen and (max-width: 767px) {
   nav .ul_nav .li_hover .anc_nav::after {
     color: #24156d;
+    font-size: 10px;
   }
 }
 nav .ul_nav .li_hover .ul_drop {
@@ -331,7 +370,6 @@ nav .close_ {
   }
   .header_parant .header .input_div_parant {
     order: 3;
-    width: 100%;
     margin-top: 10px;
   }
   .header_parant .header .input_div_parant .input_div_t {
