--- a/style/sass/layout/_header.scss
+++ b/style/sass/layout/_header.scss
@@ -1,8 +1,12 @@
 .header {
-  padding: 5px 0 20px;
+  padding: 15px 0;
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: center;
+  gap: 40px;
+  @include sm {
+    gap: 0;
+  }
 }
 .header_top {
   border-bottom: 1px solid $color_4;
@@ -74,7 +78,9 @@
 
 // input
 .input_div_parant {
-  width: 627px;
+  max-width: 627px;
+  width: 100%;
+  flex-shrink: 1;
   .input_div_t {
     margin: auto;
     position: relative;
@@ -128,7 +134,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  margin-bottom: 10px;
+  flex-shrink: 0;
   gap: 20px;
   @include xs {
     gap: 30px;
@@ -238,6 +244,13 @@ nav {
       padding: 13px 0;
       &:not(:last-child) {
         margin-inline-end: 26px;
+        @include md {
+          margin-inline-end: 15px;
+        }
+        @include sm {
+          margin-inline-end: 11px;
+        }
+
         @include xs {
           margin-inline-end: 0;
         }
@@ -257,6 +270,15 @@ nav {
         transition: 0.5s;
         text-transform: capitalize;
         display: inline-block;
+        @include md {
+          font-size: 14px;
+        }
+        @include sm {
+          font-size: 11px;
+        }
+        @include xs {
+          font-size: 16px;
+        }
         @include ar {
           font-size: 14px;
         }
@@ -283,8 +305,12 @@ nav {
           font-weight: 900;
           font-size: 10px;
           color: #fff;
+          @include md {
+            font-size: 7px;
+          }
           @include xs {
             color: $main_color;
+            font-size: 10px;
           }
         }
       }
@@ -334,7 +360,6 @@ nav {
       }
       .input_div_parant {
         order: 3;
-        width: 100%;
         margin-top: 10px;
         .input_div_t {
           width: 100%;
